@@ -1,3 +1,9 @@
+2011-05-27  Moritz Bunkus  <moritz@bunkus.org>
+
+	* build system: Added a configure check that prevents compilation
+	with wxWidgets 2.9.x due to known incompatibilities. This is also
+	mentioned in the README.
+
 2011-05-26  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge: bug fix: When a DTS track is read from a source file
